crates/engine/tests/compile-fail/command_on_enum.stderr
error: galeon protocol macros do not support enums
 --> tests/compile-fail/command_on_enum.rs:6:5
  |
6 | pub enum BadCommand {
  |     ^^^^
